C-Minus/C-Minus/Debug/C-Minus.log
  cminus.y:54.14-15: warning: symbol ID redeclared [-Wother]
     54 | am  
        |              ^~
  cminus.y:52.8-9: note: previous declaration
     52 | en <name>ID
        |        ^~
  cminus.y:55.15-17: warning: symbol NUM redeclared [-Wother]
     55 | pe <node> program  
        |               ^~~
  cminus.y:51.8-10: note: previous declaration
     51 | oken ID
        |        ^~~
  cminus.y:109.69-80: error: unexpected {...}
    109 |                         {$$ = newParamList($1, $3);}
        |                                                                     ^~~~
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Microsoft\VC\v160\Microsoft.CppCommon.targets(139,5): error MSB3073: The command "win_flex C-Minus.lex
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Microsoft\VC\v160\Microsoft.CppCommon.targets(139,5): error MSB3073: win_bison cminus.y --defines
C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Microsoft\VC\v160\Microsoft.CppCommon.targets(139,5): error MSB3073: :VCEnd" exited with code -1073741819.
